2003-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* HDSPACK.pm (setobj): Add setobj and set_hdsobj

2003-03-07  Tim Jenness  <timj@jach.hawaii.edu>

	* t/wrapper.t: Create

	* HDSPACK.pm: Create wrapper functions that no longer rely on
	Starlink status.

	* t/creobj.t: First version

	* HDSPACK.pm (creobj): Add creobj. Make sure that _find_loc can
	access CELLs (e.g AXIS(1)).

2001-03-21  Tim Jenness  <timj@jach.hawaii.edu>

	* HDSPACK.pm (retrieve_locs): Fix problem when file name uses ./
	(_find_loc): Return status rather than undef

1999-10-13  Tim Jenness  <timj@jach.hawaii.edu>

	* HDSPACK.pm (copobj): Properly deal with a new root by using
	hds_copy rather than dat_copy in that case.
